Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.46 [20200712] [svn: r854]
  - sg_rep_pip: report new provisioning initialization pattern cmd
  - sg_dd: separate category for miscompare errors
  - sg_get_elem_status: add ralwd bit sbc4r20a
  - sg_write_x: add dld bits to write(32) [sbc4r19a]
  - sg_rep_zones: print invalid write pointer LBA as -1 rather
    than 16 "f"s
  - sg_ses: use fan speed factor field for calculation [ses4r04]
  - sg_lib: restore elements and rebuild command added
  - sg_lib: Linux NVMe SNTL: add read, write and verify;
    synchronize cache and write same translations
    - add dummy start stop unit and test unit ready commands
    - wire cache mpage's WCE to nvme 'volatile write cache'
  - sg_lib: reprint cdb with illegal request sense key
    - asc/ascq match asc-num.txt @t10 20200708 [spc6r02]
  - testing/sg_mrq_testing: new, for blocking mrq usage
  - testing/sgs_dd: add evfd flags and eventfd processing
  - testing/sgh_dd: various fixes

Changelog for sg3_utils-1.45 [20200229] [svn: r843]
  - sg_get_elem_status: new utility [sbc4r16]
  - sg_ses: bug: --page= being overridden when --control and --data= also
    given; fix
    - document explicit Element type codes and example
    - rename 'SAS SlimLine' to SlimSAS [ses4r02]
    - add --inhex=FN, equivalent to --data=@FN, for compatibility with
      other utilities
    - 'fan speed factor' field added in 20-013r1
  - sg_opcodes: expand MLU (now 2 bits, spc5r20)
    - include RWCDLP field as extension of CDLP field (spc5r01)
  - sg_write_buffer: allow comma and period separated lists when input
    from stdin
  - sg_inq: update version descriptors to spc5r21
    - add some NVMe 1.4 snippets to ctl identify
  - sg_format: add --dcrt used twice (FOV=1 DCRT=0)