@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.46 [20200712] [svn: r854]
+Changelog for sg3_utils-1.46 [20200713] [svn: r855]
   - sg_rep_pip: report new provisioning initialization pattern cmd
   - sg_dd: separate category for miscompare errors
   - sg_get_elem_status: add ralwd bit sbc4r20a
@@ -10,6 +10,8 @@ Changelog for sg3_utils-1.46 [20200712] [svn: r854]
   - sg_rep_zones: print invalid write pointer LBA as -1 rather
     than 16 "f"s
   - sg_ses: use fan speed factor field for calculation [ses4r04]
+  - sg_pt_solaris+sg_pt_osf1: fix problem with clear_scsi_pt_obj()
+    which needs to remember is_nvme and dev_fd values
   - sg_lib: restore elements and rebuild command added
   - sg_lib: Linux NVMe SNTL: add read, write and verify;
     synchronize cache and write same translations
